* Fix + Tests for sliding panel collapse < 1024 * Contact Us form w/browser stats, sends to PMT * Tests for Explore. (bug from last week) * Using "implicit_wait" + wait.until selenium constructs to remove most of the sleeps from the terrain/steps file.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -419,13 +419,13 @@ html.busy, html.busy * {
 
 #mediathread_logo {
     display: block;
-  float: right;
-  height: 43px;
-      border-bottom: 1px solid #acacac;
-      border-left:  1px solid #acacac;
+    float: right;
+    height: 43px;
+    border-bottom: 1px solid #acacac;
+    border-left:  1px solid #acacac;
     background-color: #6f6f6f;
     -moz-border-radius-bottomleft: 10px;
--webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
 
 }
 
@@ -480,7 +480,6 @@ html.busy, html.busy * {
 }
 
 #standardnav {
-    position: relative;
     z-index: 9998;
 }
 
@@ -537,18 +536,21 @@ html.busy, html.busy * {
     z-index: 9997;
     float: left;
     font-size: 1.7em;
-        line-height:1.2em;
+    line-height:1.2em;
     text-transform: capitalize;
-    margin-left: 5px;
+    text-decoration: none;
+    margin: 6px 0 0 18px;
     padding: 0;
-    margin-top: -37px;
-  /*white-space:nowrap;*/
-  font-family: "Trebuchet MS", "Avenir LT std", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  *font-style: none;/*IE doesn't anti-alias italics well*/
-  color: #333;
-  max-height: 65px;
-  overflow: hidden;
+    font-family: "Trebuchet MS", "Avenir LT std", Helvetica, Arial, sans-serif;
+    font-style: italic;
+    *font-style: none;/*IE doesn't anti-alias italics well*/
+    color: #333;
+    max-height: 65px;
+    overflow: hidden;
+    max-width: 615px;
+    overflow: hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
 }
 
 #course_title a
@@ -3775,4 +3777,58 @@ input.annotation-listitem-icon {
 
 input.annotation-listitem-icon.delete {
     margin-right: 24px;
+}
+
+div.contact_us_form {
+    border: 1px solid #6f6f6f;
+    padding: 15px;
+    margin: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radiust: 10px;
+    border-radius: 10px;
+    width: 600px;
+}
+
+div.contact_us_form table,
+div.contact_us_form table tr,
+div.contact_us_form table tr td {
+    border: none;
+}
+
+div.contact_us_form table tr {
+    padding-bottom: 10px;
+}
+
+div.contact_us_form h1 {
+    font-size: 150%;
+    font-weight: bold;
+    color: #333;
+}
+
+div.contact_us_form p {
+    margin: 20px 0;
+}
+
+div.contact_us_form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+div.contact_us_form input,
+div.contact_us_form select {
+    width: 50%;
+    margin-bottom: 10px;
+}
+
+div.contact_us_form textarea {
+    width: 97%;
+    height: 200px;
+    margin-top: 5px;
+}
+
+div.contact_us_form input#submit_feedback {
+    float: right;
+    width: 125px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
